Add oslo releases for queens Dec 11, 2017
Change-Id: I26c7935d7c812e89af16f0d6ae11bd1bef13161f

--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 79e27173debb8d8e4694463cc121ca6528421393
         repo: openstack/oslo.concurrency
     version: 3.23.0
+  - projects:
+      - hash: 9584101c993747d28fd36ebbf93792c053eaaf54
+        repo: openstack/oslo.concurrency
+    version: 3.24.0
