--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: 0260f0e86b1f981b21c28055eb8fcffbb803344c
         repo: openstack/oslo.db
     version: 4.31.0
+  - projects:
+      - hash: 85cf42e841bb59ddf294ec39286ce97e57a9faae
+        repo: openstack/oslo.db
+    version: 4.32.0
