--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -37,3 +37,7 @@ releases:
       - hash: cc3b1cc673817ef9040351d57c1a650a9f402fae
         repo: openstack/oslo.policy
     version: 1.32.0
+  - projects:
+      - hash: 5f473195b2611f1c82fbee77d6c633bdf59ffea0
+        repo: openstack/oslo.policy
+    version: 1.32.1
