--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: e3fded79c12ad30ffee802613707a24005a5260c
         repo: openstack/oslo.rootwrap
     version: 5.12.0
+  - projects:
+      - hash: a73ed854d3665ce6e26ea760354cb03577d4e992
+        repo: openstack/oslo.rootwrap
+    version: 5.12.1
