--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 5c9253bb422907cebbf59a34a8eb4a61f691927d
         repo: openstack/oslo.service
     version: 1.28.0
+  - projects:
+      - hash: cf663888cf417f3ea3623ec9e66d410f37fb5593
+        repo: openstack/oslo.service
+    version: 1.28.1
