--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 464a948d770f1a1061f830ece3f62d0ca0c44063
         repo: openstack/oslo.utils
     version: 3.32.0
+  - projects:
+      - hash: 58fb709f58bd031c5114d9b6fe2e0926175b87b6
+        repo: openstack/oslo.utils
+    version: 3.33.0
