--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 8ca9a30599972a3e2d6d2cd6d5cd8e08f7496b33
         repo: openstack/taskflow
     version: 2.17.0
+  - projects:
+      - hash: 60f28477ec1861041f23accea445bfbe9ed4ed37
+        repo: openstack/taskflow
+    version: 3.0.0
