--- a/deliverables/ocata/kolla.yaml
+++ b/deliverables/ocata/kolla.yaml
@@ -41,3 +41,7 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: d33ff04e032dc1b17139194a4409d455cf899c8b
+  - version: 4.0.3
+    projects:
+      - repo: openstack/kolla
+        hash: 4de11cec37bd2001c607b78e62b8ac7dfb952b73
