--- a/deliverables/ocata/kolla-ansible.yaml
+++ b/deliverables/ocata/kolla-ansible.yaml
@@ -42,3 +42,7 @@ releases:
     projects:
       - repo: openstack/kolla-ansible
         hash: f61d731a48887110592b63baf8c27bd3ac0bac2f
+  - version: 4.0.3
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: 972b89359b2c378c0e1b531cff03b90073b052bc
