--- a/deliverables/queens/ceilometer-powervm.yaml
+++ b/deliverables/queens/ceilometer-powervm.yaml
@@ -8,3 +8,7 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: 208ae595e7c50ecafdc4a95d13c3a97d20f24ab2
     version: 6.0.0.0b1
+  - projects:
+      - repo: openstack/ceilometer-powervm
+        hash: e66d39dec8791f219246452d3bb0ed1138c86abd
+    version: 6.0.0.0b2
