nova: release pike 16.0.4
Contains a fix for a new CVE, a fix for an existing CVE errata,
and a fix for an API regression.

Change-Id: I1fcdb578168a294dc7aef08bb4048bfaede8c156

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -50,3 +50,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 3f63d057a64b688b66ff1903c1afc4d97ba6df6d
+  - version: 16.0.4
+    projects:
+      - repo: openstack/nova
+        hash: 4d4930c59af32d717088b3af28047ee1fcf09d4a
