--- a/deliverables/queens/zaqar.yaml
+++ b/deliverables/queens/zaqar.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: c64b869c9e83175bcc30dcf22b2618d096477121
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/zaqar
+        hash: 07a2a5b28811d3eb3e8649b9140d422053ddea2f
