--- a/deliverables/queens/zaqar-ui.yaml
+++ b/deliverables/queens/zaqar-ui.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 4b5f08288994f6b7228bb8995af4ceb70c7ab396
+  - version: 4.0.0.0b2
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 2406e9e7e80bc2654767751c75155178c8269f74
