--- a/deliverables/queens/designate.yaml
+++ b/deliverables/queens/designate.yaml
@@ -5,8 +5,13 @@ launchpad: designate
 release-model: cycle-with-milestones
 team: designate
 type: service
+release-notes: https://docs.openstack.org/releasenotes/designate/unreleased.html
 releases:
   - version: 6.0.0.0b1
     projects:
       - repo: openstack/designate
         hash: 0b64fe765e607a2b20472a4d910b58e57e09008f
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/designate
+        hash: 3e0dbc7892e309f9df5846cb977e90a6fc2e2b8d
