--- a/deliverables/queens/designate-dashboard.yaml
+++ b/deliverables/queens/designate-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/designate-dashboard
         hash: 6213e7534f2c197bd2c577bd183d0bd53bf89857
+  - version: 6.0.0.0b2
+    projects:
+      - repo: openstack/designate-dashboard
+        hash: 642edf494b0f12e05de69b98a4a9fd618950ba4f
