--- a/deliverables/queens/murano.yaml
+++ b/deliverables/queens/murano.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/murano
         hash: f73c89d25e951ff922190cf83a440f1da3630c4f
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/murano
+        hash: ac67e669a9010eff05e54b6a83e19e0431709a8a
