--- a/deliverables/queens/murano-dashboard.yaml
+++ b/deliverables/queens/murano-dashboard.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 0b47b88760951261eb4a4b1c41d2cb944d7bf7b1
+  - version: 5.0.0.0b2
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: c0b5c009e7180880316dd148c5fe14a2a8da5b73
