--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -34,6 +34,10 @@ releases:
       - repo: openstack/cinder
         hash: 7cc8d0ea63cc19aefcc0844ce455aead44297c21
     version: 11.0.1
+  - projects:
+      - repo: openstack/cinder
+        hash: d810928406eb2a95bb5f15a6d8437b377abde733
+    version: 11.0.2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
