pymod2pkg: Release 0.11.0
This release adds freezer support for SUSE and RDO.

Change-Id: I320a509da755c8957cfd08f03daab7790b219e53

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -108,3 +108,7 @@ releases:
       - hash: 9eb8f76e64601fc3dfc1ddcdb7a67d096a1437b9
         repo: openstack/pymod2pkg
     version: 0.10.2
+  - projects:
+      - hash: 7347926f43de1695c1fa11b60f068c11a8c9bf55
+        repo: openstack/pymod2pkg
+    version: 0.11.0
