Tag monasca-common
Bump the version for monasca common so we can use the kafka
publishing retry fix in monasca-api. This also adds:
"Add Cassandra db support" which allows configuring Cassandra
into Monasca and the bump of the POM versions

Change-Id: If04da8fa29437d7f765b124f1ec8321b61a14ddd

--- a/deliverables/queens/monasca-common.yaml
+++ b/deliverables/queens/monasca-common.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 9258e7efc2d8526a9450c3d2d858e6fcdfa8a56b
         repo: openstack/monasca-common
     version: 2.5.0
+  - projects:
+      - hash: f08e707b1648e62a7afd8260b614a511fac59081
+        repo: openstack/monasca-common
+    version: 2.6.0
