--- a/deliverables/_independent/puppet-ceph.yaml
+++ b/deliverables/_independent/puppet-ceph.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: ebea4b703d002d64d0b623cc51d42890b187ab97
         repo: openstack/puppet-ceph
     version: 2.4.1
+  - projects:
+      - hash: da96ae79cd581841af35a5e0b31426d6a7974af9
+        repo: openstack/puppet-ceph
+    version: 2.4.2
