Add oslo releases for queens Dec 18, 2017
Change-Id: I076de697e1a13bc106b488894b062a58c7c51f7a

--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -41,3 +41,7 @@ releases:
       - hash: 5f473195b2611f1c82fbee77d6c633bdf59ffea0
         repo: openstack/oslo.policy
     version: 1.32.1
+  - projects:
+      - hash: 484bc968a6955c0e8ddf303fe1c4c9623c110c24
+        repo: openstack/oslo.policy
+    version: 1.32.2
