--- a/deliverables/queens/oslo.privsep.yaml
+++ b/deliverables/queens/oslo.privsep.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 7486ad4f35f31992f4ba6356857130ed635988d2
         repo: openstack/oslo.privsep
     version: 1.24.0
+  - projects:
+      - hash: e93b540996b25abce3371bedc10768b4ad6cbb85
+        repo: openstack/oslo.privsep
+    version: 1.25.0
