--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 60f28477ec1861041f23accea445bfbe9ed4ed37
         repo: openstack/taskflow
     version: 3.0.0
+  - projects:
+      - hash: 4caeea11cc5fd755050653b89962397aee5218f1
+        repo: openstack/taskflow
+    version: 3.0.1
