--- a/deliverables/ocata/oslo.messaging.yaml
+++ b/deliverables/ocata/oslo.messaging.yaml
@@ -48,3 +48,7 @@ releases:
     projects:
       - repo: openstack/oslo.messaging
         hash: 2775568e01b8429dc90fade4e38673085098da34
+  - projects:
+      - hash: e1ac7f8862425e5a8f9b96e28234a0b59e579dbd
+        repo: openstack/oslo.messaging
+    version: 5.17.3
