--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -28,3 +28,7 @@ releases:
       - repo: openstack/kolla
         hash: b229f8ef9ad0799f9823475f0864a9a47ccc7a62
     version: 5.0.0
+  - version: 5.0.1
+    projects:
+      - repo: openstack/kolla
+        hash: 5bae59ba945d20b1a75b086379d1f40f08b44196
