--- a/deliverables/pike/kolla-ansible.yaml
+++ b/deliverables/pike/kolla-ansible.yaml
@@ -28,3 +28,7 @@ releases:
       - repo: openstack/kolla-ansible
         hash: e98d0863638779dba683da1e0e1cf623fb773c19
     version: 5.0.0
+  - version: 5.0.1
+    projects:
+      - repo: openstack/kolla-ansible
+        hash: a097d59a5ec5b637eb4a61307e58a5e04f3cb43e
