--- a/tox.ini
+++ b/tox.ini
@@ -59,8 +59,11 @@ commands = {toxinidir}/tools/build_tag_history.sh {toxinidir}
 #commands = python setup.py testr --coverage --testr-args='{posargs}'
 
 [testenv:docs]
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
-deps = .[sphinxext]
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
