nova: release ocata 15.1.0
This is a minor version bump because there is a database
schema migration in here related to a bug fix. It is optional
to actually run the schema migration, but the minor version
bump is used to signal it's more than just an ordinary
patch release.

Change-Id: I1015bbc74df0ed94db96c0bddddf4ae9825b89f1

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -121,3 +121,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: ffd4f72d16dacd6ca1e703f9bab37b8917d253e7
+  - version: 15.1.0
+    projects:
+      - repo: openstack/nova
+        hash: 4f0ff43c79c02689a118dc8100187c19b5c21238
