nova: release newton 14.1.0
This is a minor version bump because there is a database
schema migration in here related to a bug fix. It is optional
to actually run the schema migration, but the minor version
bump is used to signal it's more than just an ordinary
patch release.

Depends-On: I1aa3ca6cc70cef65d24dec1e7db9491c9b73f7ab

Change-Id: I0fd6f698b6bb240b8700a28abcd9e68d23f204ee

--- a/deliverables/newton/nova.yaml
+++ b/deliverables/newton/nova.yaml
@@ -101,3 +101,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: db6e1dd0a0fde9846114f02811087640fc84f58c
+  - version: 14.1.0
+    projects:
+      - repo: openstack/nova
+        hash: 808d36475103e373f1deb3344b6829ce68d6cdd5
