--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -2,7 +2,7 @@
 include-pypi-link: yes
 release-model: cycle-with-intermediary
 storyboard: 760
-team: shade
+team: OpenStackSDK
 type: library
 releases:
   - highlights: |
@@ -26,3 +26,10 @@ releases:
       - hash: e11ecfaf98d220596ad013af42b25bbb8326df8b
         repo: openstack-infra/shade
     version: 1.25.0
+  - highlights: |
+      Removed the last of the use of the OpenStack python client libraries
+      in favor of direct REST calls through keystoneauth.
+    projects:
+      - hash: d8d0fca288b5da8f27096e474ff6b52095fa69cb
+        repo: openstack-infra/shade
+    version: 1.26.0
