--- a/deliverables/queens/monasca-agent.yaml
+++ b/deliverables/queens/monasca-agent.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 8ac0f834adbf740f72de70650c3c53921a64bb7f
         repo: openstack/monasca-agent
     version: 2.4.0
+  - projects:
+      - hash: d819e62852d578a68d5363f3ac2ebae3d84f58cb
+        repo: openstack/monasca-agent
+    version: 2.5.0
