--- a/deliverables/queens/os-win.yaml
+++ b/deliverables/queens/os-win.yaml
@@ -16,3 +16,15 @@ releases:
     highlights: |
       This release includes support for retrieving the available SR-IOV VFs
       and enabling SR-IOV on VMs' vswitch ports.
+  - version: 3.0.0
+    projects:
+      - repo: openstack/os-win
+        hash: 204156f69d580e1ddbf3359b3995d2b9f9b76444
+    highlights: |
+      Includes the processutils module, which can be used to group parent and
+      child processes into jobs, ensuring that when the parent process is
+      killed, the child processes are killed as well. Additionally, resource
+      limits can be set on jobs.
+      Adds VHD attach / detach, which can be used for adding support for
+      volume backup support for the Windows SMB Cinder driver.
+      Removes deprecated methods (vmutils) and exception.
