Tag Monasca repositories
* monasca-api           2.4.0
* monasca-ceilometer    1.6.0
* monasca-log-api       2.5.0
* monasca-notification  1.12.0
* monasca-persister     1.9.0
* monasca-statsd        1.9.0
* monasca-transform     0.13.0
* monasca-ui            1.11.0
* python-monascaclient  1.9.0

Change-Id: Ic57b16b625c6fd14a971ede5505967ac6bdeba67

--- a/deliverables/queens/monasca-api.yaml
+++ b/deliverables/queens/monasca-api.yaml
@@ -8,3 +8,9 @@ releases:
       - hash: 37b2111435649cf9cc11c403b10544510022297e
         repo: openstack/monasca-api
     version: 2.3.0
+  - projects:
+      - hash: 5d1c8921e75a9d81fff5a556360d15c596505f5a
+        repo: openstack/monasca-api
+    version: 2.4.0
+    highlights: |-
+      * Add support for Apache Cassandra as time series database
