--- a/deliverables/queens/monasca-log-api.yaml
+++ b/deliverables/queens/monasca-log-api.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 1c6e5db9715d98f4dcac5f327dc77b8bc7fc789c
         repo: openstack/monasca-log-api
     version: 2.4.0
+  - projects:
+      - hash: 6b7a43342cd711ae7cb31b6daf2ffe9009a91e57
+        repo: openstack/monasca-log-api
+    version: 2.5.0
