--- a/deliverables/queens/monasca-persister.yaml
+++ b/deliverables/queens/monasca-persister.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 66fe6f98c079490d2d5de4c161da1d8b3801cda4
         repo: openstack/monasca-persister
     version: 1.8.0
+  - projects:
+      - hash: 7d852c9612cb3171979fe07a59ad03c0bb589e67
+        repo: openstack/monasca-persister
+    version: 1.9.0
