--- a/deliverables/queens/monasca-statsd.yaml
+++ b/deliverables/queens/monasca-statsd.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 55e415b9274042e931968ea7619253e19f9fabc4
         repo: openstack/monasca-statsd
     version: 1.8.0
+  - projects:
+      - hash: 00b817158420f522a07019693d8b4583f1806180
+        repo: openstack/monasca-statsd
+    version: 1.9.0
