--- a/deliverables/queens/monasca-transform.yaml
+++ b/deliverables/queens/monasca-transform.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 5a5a980cbff8e70e2f1f046b98838600e76235b6
         repo: openstack/monasca-transform
     version: 0.12.0
+  - projects:
+      - hash: 4de903facb181a5f422c8d144d0b2fce50f35891
+        repo: openstack/monasca-transform
+    version: 0.13.0
