--- a/deliverables/queens/monasca-ui.yaml
+++ b/deliverables/queens/monasca-ui.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: dd6e09b01d072110fdb39a9662221977c89dd729
         repo: openstack/monasca-ui
     version: 1.10.0
+  - projects:
+      - hash: 8aa1cccf29fdbba7fabaa3634ef534ac86267c1e
+        repo: openstack/monasca-ui
+    version: 1.11.0
