--- a/deliverables/queens/python-monascaclient.yaml
+++ b/deliverables/queens/python-monascaclient.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: d81d2119fb90702d4ff497b29f5619ccf1d8ae04
         repo: openstack/python-monascaclient
     version: 1.8.0
+  - projects:
+      - hash: d7f6fb2d83f8a40e5d630b9feefc6584f80b5f0e
+        repo: openstack/python-monascaclient
+    version: 1.9.0
