--- a/deliverables/queens/monasca-notification.yaml
+++ b/deliverables/queens/monasca-notification.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 2092e4185c26a0153951906382e7acec4e29fc29
         repo: openstack/monasca-notification
     version: 1.11.0
+  - projects:
+      - hash: 8b6260e10f7cfbd204fc9bef9345f332160b1b08
+        repo: openstack/monasca-notification
+    version: 1.12.0
