Add PTL Election Dates to Schedule
This patch adds a new item to the schedule: email
deadline. It then adds that item, along with ptl nominatons
and ptl elections to the official schedule.

Change-Id: I433c4c51564ec0cd95302a1a14071c23a2bceba5

--- a/doc/source/queens/schedule.yaml
+++ b/doc/source/queens/schedule.yaml
@@ -116,6 +116,8 @@ cycle:
   - q-goals-complete
   project-specific:
   - q-keystone-ffreeze
+  - r-email-deadline
+  - r-ptl-nomination
 - end: '2018-02-02'
   name: R-4
   start: '2018-01-29'
@@ -126,6 +128,8 @@ cycle:
   - q-rc1
   - q-hard-sf
   - q-trailing-ff
+  project-specific:
+  - r-ptl-election
 - end: '2018-02-16'
   name: R-2
   start: '2018-02-12'
