--- a/deliverables/queens/python-brick-cinderclient-ext.yaml
+++ b/deliverables/queens/python-brick-cinderclient-ext.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 17e94f506b18ff1354ce8938467e31f6ae867c35
         repo: openstack/python-brick-cinderclient-ext
     version: 0.6.0
+  - projects:
+      - hash: bf4d0ca25b0917dbe52c4a17e6603fa2f0b583e1
+        repo: openstack/python-brick-cinderclient-ext
+    version: 0.7.0
