--- a/deliverables/queens/keystonemiddleware.yaml
+++ b/deliverables/queens/keystonemiddleware.yaml
@@ -11,5 +11,9 @@ releases:
       - hash: db21ecd2b55578f9fecae29f9b1334ca5d60e28b
         repo: openstack/keystonemiddleware
     version: 4.19.0
+  - projects:
+      - hash: 9de823ac4c3dff4b85a006b92c94c97a92512f37
+        repo: openstack/keystonemiddleware
+    version: 4.20.0
 team: keystone
 type: library
