Update shade team name to OpenStackSDK
The shade team has been renamed, but we still have a few deliverable
files using the old name. This causes problems with some tooling when
looking up team governance data.

Change-Id: Ibfc6e81d4b9b977b9aedd328031f6a2757e0b1e3

--- a/deliverables/pike/shade.yaml
+++ b/deliverables/pike/shade.yaml
@@ -48,5 +48,5 @@ releases:
         repo: openstack-infra/shade
     version: 1.22.2
 storyboard: 760
-team: shade
+team: OpenStackSDK
 type: library
