--- a/deliverables/pike/requestsexceptions.yaml
+++ b/deliverables/pike/requestsexceptions.yaml
@@ -2,7 +2,7 @@
 include-pypi-link: true
 release-model: cycle-with-intermediary
 storyboard: 835
-team: shade
+team: OpenStackSDK
 type: library
 releases:
   - version: 1.3.0
