--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -45,3 +45,7 @@ releases:
       - hash: 484bc968a6955c0e8ddf303fe1c4c9623c110c24
         repo: openstack/oslo.policy
     version: 1.32.2
+  - projects:
+      - hash: 8835af6aa5b3c039b0c1b74a2b697fb654ae24dd
+        repo: openstack/oslo.policy
+    version: 1.33.0
