--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: ed3fdfdb0386a90e61c9aa7702e4e88bf34e1d62
         repo: openstack/tripleo-common
     version: 8.2.0
+  - projects:
+      - hash: dc2101ba72cb46e8002d95ed7c73fbee60c34f91
+        repo: openstack/tripleo-common
+    version: 8.3.0
