--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -4,3 +4,4 @@ sphinx>=1.6.2  # BSD
 oslosphinx>=4.7.0  # Apache-2.0
 sphinxcontrib.datatemplates>=0.1.0  # BSD License
 icalendar>=3.10  # BSD
+whereto>=0.3.0  # Apache-2.0
