--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,9 @@ deps =
   -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
+commands =
+  sphinx-build -a -E -W -d doc/build/doctrees -b html doc/source doc/build/html
+  whereto {toxinidir}/doc/source/_extra/.htaccess {toxinidir}/doc/test/redirect-tests.txt
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
