--- a/deliverables/queens/python-zunclient.yaml
+++ b/deliverables/queens/python-zunclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: 3a3f4535b9ad510bcc5ff09f4909035107b1eecb
+  - version: 1.0.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 6fdb1a5f09cd85854bf175d1de4cd9059b65bce1
