--- a/deliverables/queens/python-ironicclient.yaml
+++ b/deliverables/queens/python-ironicclient.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 9ab4193ea3a7cc11046f6e3e1b64a16211d00ef2
         repo: openstack/python-ironicclient
     version: 2.0.0
+  - projects:
+      - hash: 5a427eed5c70c976161bc151d2603ffb95918b28
+        repo: openstack/python-ironicclient
+    version: 2.1.0
