--- a/deliverables/queens/keystonemiddleware.yaml
+++ b/deliverables/queens/keystonemiddleware.yaml
@@ -15,5 +15,9 @@ releases:
       - hash: 9de823ac4c3dff4b85a006b92c94c97a92512f37
         repo: openstack/keystonemiddleware
     version: 4.20.0
+  - projects:
+      - hash: f1f2c4a0c56f24dd70b62cd800495011345c000b
+        repo: openstack/keystonemiddleware
+    version: 4.21.0
 team: keystone
 type: library
