TripleO newton release
Change-Id: Iae10eb3a80ea108852ab952bfd9ad4eb5ad6b961

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -67,5 +67,9 @@ releases:
       - hash: 5711e170a7f6177bdf4b74f160228cac57568d5b
         repo: openstack/instack-undercloud
     version: 5.3.5
+  - projects:
+      - hash: f48b9024cdd8c7e910e0732d72144b0b48bc5de1
+        repo: openstack/instack-undercloud
+    version: 5.3.6
 team: tripleo
 type: other
