--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -65,5 +65,9 @@ releases:
       - hash: 388d184386c99263b79f55267087ca5b7fc72222
         repo: openstack/puppet-tripleo
     version: 5.6.5
+  - projects:
+      - hash: 2576acbb897fd077e336a5bc472a6015ee04d328
+        repo: openstack/puppet-tripleo
+    version: 5.6.6
 team: tripleo
 type: other
