--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -75,5 +75,9 @@ releases:
       - hash: ecb34655ede4825ef8dec90373436c9751613096
         repo: openstack/tripleo-heat-templates
     version: 5.3.7
+  - projects:
+      - hash: f62da2870adb71226fedb9c43ebc4176dccd5bd4
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.8
 team: tripleo
 type: other
