TripleO ocata release
Change-Id: Ib0a3f3500d6242067eb3132a3f2a9cf0a2c341c5

--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -54,5 +54,9 @@ releases:
       - hash: 1073cca81549989577e0e7b7f4be11c0d95e2590
         repo: openstack/puppet-tripleo
     version: 6.5.6
+  - projects:
+      - hash: 1285b770db0483580d98d28d7ae5b6dbbc7d2f10
+        repo: openstack/puppet-tripleo
+    version: 6.5.7
 team: tripleo
 type: other
