--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -64,5 +64,9 @@ releases:
       - hash: 62256b2f6b39396c24de992d325d8f87deb37a89
         repo: openstack/tripleo-heat-templates
     version: 6.2.7
+  - projects:
+      - hash: 4c002bd1d6d8c2118cb27b3246e08a80a8a8107f
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.8
 team: tripleo
 type: other
