--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 68d112edef1d1c3c3e531bc482e32f62031d7431
         repo: openstack/tripleo-validations
     version: 5.6.2
+  - projects:
+      - hash: 97ae1217df387dbea828ee5f942def9217609676
+        repo: openstack/tripleo-validations
+    version: 5.6.3
 team: tripleo
 type: other
