TripleO pike release
Change-Id: Ic5172401dccf7130567d18b19dbe3893a36ba829

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -54,5 +54,9 @@ releases:
       - hash: 0191cd4933e2e7a514a931675fe7ae6fc0bf7e4f
         repo: openstack/instack-undercloud
     version: 7.4.6
+  - projects:
+      - hash: 5004fa5c77ceecc8c43ca9af827ec4786fbad394
+        repo: openstack/instack-undercloud
+    version: 7.4.7
 team: tripleo
 type: other
