--- a/deliverables/pike/instack.yaml
+++ b/deliverables/pike/instack.yaml
@@ -11,6 +11,10 @@ releases:
       - hash: d0b15e2d983de5f2517034a96ae001073e32639e
         repo: openstack/instack
     version: 7.0.1
+  - projects:
+      - hash: eed4f0b988a504e7f90a1eeaa295835c8d080714
+        repo: openstack/instack
+    version: 7.0.2
 team: tripleo
 type: library
 branches:
