--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -49,5 +49,9 @@ releases:
       - hash: d36324f74c4db5ffe3cc4620936f014742011bee
         repo: openstack/puppet-tripleo
     version: 7.4.6
+  - projects:
+      - hash: 6f18d036d2ff6c5831b5e114a252a5f4c67702ea
+        repo: openstack/puppet-tripleo
+    version: 7.4.7
 team: tripleo
 type: other
