--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -62,5 +62,9 @@ releases:
       - hash: aa14cae1443c2979b994c723deacacc60ab432fe
         repo: openstack/tripleo-common
     version: 7.6.6
+  - projects:
+      - hash: 9c1acc2c9b739c6a14804221eda39a7f0002448f
+        repo: openstack/tripleo-common
+    version: 7.6.7
 team: tripleo
 type: other
