--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -55,5 +55,9 @@ releases:
       - hash: 0c569d5a0bf598b3d000157c912536752150874f
         repo: openstack/tripleo-heat-templates
     version: 7.0.6
+  - projects:
+      - hash: 49a134bfd3ed7301e71da2d9a50b34eb09cf2c84
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.7
 team: tripleo
 type: other
