--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: 3ba8744b766d5a7290e81dc8dd3dae1e1aac3d6b
         repo: openstack/tripleo-ui
     version: 7.4.6
+  - projects:
+      - hash: 94fa4b713375d84e2486784559be1a92274fc2bb
+        repo: openstack/tripleo-ui
+    version: 7.4.7
 team: tripleo
 type: other
