--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -42,5 +42,9 @@ releases:
       - hash: 3efc52554b8984555826ac0048597a0570d93008
         repo: openstack/tripleo-validations
     version: 7.4.4
+  - projects:
+      - hash: 6949c444388f8f92b149f0c3ae61b8086d794d1b
+        repo: openstack/tripleo-validations
+    version: 7.4.5
 team: tripleo
 type: other
