--- a/deliverables/queens/cliff.yaml
+++ b/deliverables/queens/cliff.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/cliff
         hash: a9719bc23ea3ad90cbad9ab743e678f491e85f0a
+  - projects:
+      - hash: fa2de57c02c4ab677558f33fd9ba07382f700b39
+        repo: openstack/cliff
+    version: 2.10.0
