Request for release of Sahara Pike 7.0.1
Fixing some bugs and migrating to Zuul v3

Change-Id: Iccfaa43fe18ceff90fca84974d84e6b8e37607f2

--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -61,11 +61,9 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: 30a3b8b58867a176b502ad0e5601533655d7336b
-      - repo: openstack/sahara-dashboard
-        hash: 7394ec618343bc997e097958ac897b1a33d3cb1c
-      - repo: openstack/sahara-extra
-        hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
-      - repo: openstack/sahara-image-elements
-        hash: 79369e39e40e1d9ba1cbca6039a3a06afbaf1685
     version: 7.0.0
+  - version: 7.0.1
+    projects:
+      - repo: openstack/sahara
+        hash: a39c690aeca04dcde56384448ce577fd50eb8bf1
 release-notes: https://docs.openstack.org/releasenotes/sahara/pike.html
