--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: d4c581de4f6e9768b05600ec57991d9abbda7fa7
         repo: openstack/python-manilaclient
     version: 1.19.0
+  - projects:
+      - hash: 4d3652868b4ffd82cecb540cac01f64728afcd67
+        repo: openstack/python-manilaclient
+    version: 1.20.0
