--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -13,3 +13,8 @@ releases:
       - hash: cc5fee3cabfcb826f8f5d64ba7aebd4024230289
         repo: openstack/python-tripleoclient
     version: 8.1.0
+  - projects:
+      - hash: 52b71ea76ee5b88221655ffa07539dfc0cc41764
+        repo: openstack/python-tripleoclient
+    version: 9.0.0
+    highlights: 'Old baremetal commands are now removed.'
