--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: a5c60d94d86db6e9749ab1b4e462549a65dab31a
         repo: openstack/os-brick
     version: 2.1.1
+  - projects:
+      - hash: effd16e33e593e94b653b47bf1045250a6bf8dfd
+        repo: openstack/os-brick
+    version: 2.2.0
