--- a/deliverables/queens/python-cinderclient.yaml
+++ b/deliverables/queens/python-cinderclient.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 76fe6fc01d5ded29c65b5fe486fd3c619c01017a
         repo: openstack/python-cinderclient
     version: 3.3.0
+  - projects:
+      - hash: 36a2f4b4ebe8c46df2b7786ad9402ac7b12e700a
+        repo: openstack/python-cinderclient
+    version: 3.4.0
